--- a/public/index.html
+++ b/public/index.html
@@ -23,19 +23,25 @@
         <div class="col-lg-4 order-2" id="sticky-sidebar">
             <div class="sticky-top">
                 <div class='order'>Your order</div>
-                <div class='img'><img src="emptycart.png" alt=""></div>
+                <div class='img-cart'><img src="emptycart.png" alt=""></div>
                 <div class='bag'>Your bag is empty</div>
             </div>
         </div>
-        <div class="col-lg-8" id="main">
-          <div id='banner'></div>
-          <div id='menu'></div>
-          <div id='nearby'></div>
+        <div class="col-lg-8" id="main-column">
+          <div id='main'></div>
+          <br/>
+          <div id='app'></div>
+          <br/>
+          <div id='carousel'></div>
+          <br/>
           <div id='reviews'></div>
         </div>
     </div>
-  
-  <script src="http://localhost:3000/restaurants/10/allreviews/bundle.js"></script>  
+    
+  <script src="./bannerBundle.js"></script> 
+  <script src="./menuBundle.js"></script>  
+  <script src="./carouselBundle.js"></script> 
+  <script src="http://localhost:3000/10/allreviews/bundle.js"></script>  
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
