--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>GrubHub</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Acme|Bree+Serif|Crete+Round|Fira+Sans+Condensed|Heebo|Quattrocento+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 
@@ -23,8 +22,9 @@
         <div class="col-lg-4 order-2" id="sticky-sidebar">
             <div class="sticky-top">
                 <div class='order'>Your order</div>
-                <div class='img-cart'><img src="emptycart.png" alt=""></div>
-                <div class='bag'>Your bag is empty</div>
+                <div>
+                  <div class='img-cart'><img src="emptycart2.png" alt=""></div>
+                </div>
             </div>
         </div>
         <div class="col-lg-8" id="main-column">
@@ -38,10 +38,10 @@
         </div>
     </div>
     
-  <script src="./bannerBundle.js"></script> 
-  <script src="./menuBundle.js"></script>  
-  <script src="./carouselBundle.js"></script> 
-  <script src="http://localhost:3000/10/allreviews/bundle.js"></script>  
+  <script src="http://ec2-54-193-75-21.us-west-1.compute.amazonaws.com/bundle.js"></script> 
+  <script src="http://ec2-52-43-228-173.us-west-2.compute.amazonaws.com/grub-reactor/2/bundle.js"></script>  
+  <script src="http://ec2-13-57-220-156.us-west-1.compute.amazonaws.com/bundle.js"></script>
+  <script src="http://ec2-34-221-253-114.us-west-2.compute.amazonaws.com/grubhub/5/allreviews/bundle.js"></script>  
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
